2006-09-07  Jb Evain  <jbevain@gmail.com>

	* *Collection.cs:
		Remove the unused events stuff.

2006-08-31  Jb Evain  <jbevain@gmail.com>

	* /!\ Breaking changes:
		On the way to Cecil 0.5. Remove meaningless interfaces.
		GenericParamAttributes -> GenericParameterAttributes
		ParamAttributes -> ParamAttributes

		I'll provide a migration path with a script.

		Please do not use this revision, other changes are on the way.

2006-08-26  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionReader.cs:
		Fix a bug when reading some parameters.

2006-08-26  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/ReflectionWriter.cs:
		Fix the computation of the size of the last opcode in case
		of an exception handler is pointing outside the cil stream.

	* Mono.Cecil.Cil/ReflectionWriter.cs:
		Don't use seh tiny headers when the size can't fit in a byte.

	* Mono.Cecil.Cil/ReflectionWriter.cs:
		Fix a problem in the computation of the stack when the IL
		is somewhat strange.

2006-08-23  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyInfo.cs:
		Cecil 0.4.3 release.

2006-08-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Metadata/MetadataWriter.cs:
		Fix a bug in field initial values writing.

	* Mono.Cecil/BaseAssemblyResolver.cs:
		Look for assemblies in ./ first

2006-08-17  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/BaseAssemblyResolver.cs:
		Resolve the corlib depending on its version.

	* Mono.Cecil/AssemblyName.cs
	  Mono.Cecil/BaseAssemblyResolver.cs:
		Implement a AssemblyNameReference.Parse(string)

	* Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs:
		Avoid infinite recursion.

	* Mono.Cecil/BaseAssemblyResolver.sc:
		Stay .net 1.1 compatible

2006-08-16  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IAssemblyResolver.cs
	  Mono.Cecil/BaseAssemblyResolver.cs
	  Mono.Cecil/DefaultAssemblyResolver.cs
	  Mono.Cecil/AssemblyDefinition.cs