@@ -1,5 +1,11 @@
 2006-09-07  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil/MarshalSpec.cs
+	  Mono.Cecil/ReflectionReader.cs
+	  Mono.Cecil/ReflectionWriter.cs
+	  CodeGen/cecil-mig.rb:
+		Refactor names from Desc to Spec.
+
 	* *Collection.cs:
 		Remove the unused events stuff.
 
